# -

./: CMakeLists.txt
Basic/: Basic.cpp  evalstate(todo).cpp  evalstate(todo).h  exp(done).cpp  exp(done).h  parser(done).cpp  parser(done).h  program(todo).cpp  program(todo).h  statement(todo).cpp  statement(todo).h
StanfordCPPLib/: simpio.cpp  tokenscanner.h
